LRDOCS-11552 Document JVM option